# multi_agent_planner

./: CMakeLists.txt  README.md  package.xml
launch/: agents.launch
media/: four_agents.avi  four_agents_collisions.avi  test_cases.avi
msg/: agent_info.msg
rviz/: rviz_config.rviz
src/: agent_node.cpp  agent_obj.cpp  agent_obj.h  motion_planner.cpp  motion_planner_node.cpp  motion_planner_obj.cpp  motion_planner_obj.h
src/test/: tests_multi_agent_planner.cpp
srv/: get_plan.srv  update_goal.srv
test/: agents.test
