<?xml version="1.0"?>
<package format="2">
  <name>multi_agent_planner</name>
  <version>0.0.0</version>
  <description>The multi_agent_planner package</description>

  <maintainer email="solomonwiznitzer2018@u.northwestern.edu">Solomon Wiznitzer</maintainer>

  <license>BSSD</license>
  <!-- <url type="website">http://wiki.ros.org/multi_agent_planner</url> -->
  <author email="solomonwiznitzer2018@u.northwestern.edu">Solomon Wiznitzer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
